# lenguaje-c

./: .TODO  .gitignore  .markdownlint.jsonc  404.html  Readme.md  TODO  index.html  init.sh  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: action.yml  actions.yml  release.yml
01_variables/: index.html
02_tipos_datos/: index.html
03_declaracion_de_variables/: index.html
04_estructura_archivo/: index.html
05_salida_datos/: index.html
06_operaciones_aritmeticas/: index.html
07_entrada_datos_scanf/: index.html
08_decisiones_1/: index.html
09_decisiones_2/: index.html
10_ciclos_1/: index.html
11_ciclos_2/: index.html
12_arrays/: index.html
12_arreglos/: index.html
13_funciones/: index.html
13_strings/: index.html
14_funciones/: index.html
14_strings/: index.html
15_modulos/: index.html
Ejemplos/: index.html
Ejercicios/: index.html
codigos/: acortador.c  array_1  array_1.c  cal_cuadrado_basica.c  calculadora_cuadrado.c  calculadora_infinita_basica_for.c  edad.c  edad18.c  lib  lib.c  logico1.c  mat.c  mayor_menor_edad.c  operaciones.c  promedio.c  tabla15.c  tempCodeRunnerFile
docs/: 03_declaracion_de_variables.md  04_estructura_archivo.md  05_salida_datos.md  06_operaciones_aritmeticas.md  07_entrada_datos_scanf.md  08_decisiones_1.md  09_decisiones_2.md  10_ciclos_1.md  11_ciclos_2.md  12_arrays.md  13_funciones.md  14_strings.md  index.md  practicas.md  practicas_2.md  secuencia.md
practicas/: index.html
practicas_2/: index.html
search/: search_index.json
secuencia/: index.html
(+10 files in other folders)
