[tool.poetry]
name = "langc"
version = "0.1.0"
description = "Documentacion sobre lenguaje C"
authors = ["jalmx <jalm_x@hotmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.11"
mkdocs-material-extensions = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
